# PolicyGuard

./: .env.example  .gitignore  README.md  project-structure.md  pyproject.toml
agent/: prompts.py  runtime.py  tools.py
agent/tests/: test_runtime.py  test_tools.py
demo/: demo.py
docs/: architecture.md  design_decisions.md  threat_model.md
eval/: episode_spec.py  metrics.py  run_eval.py
eval/episodes/: ep-001.yaml  ep-002.yaml  ep-003.yaml  ep-004.yaml  ep-005.yaml  ep-006.yaml  ep-007.yaml  ep-008.yaml  ep-009.yaml  ep-010.yaml  ep-011.yaml  ep-012.yaml  ep-013.yaml  ep-014.yaml  ep-015.yaml  ep-016.yaml  ep-017.yaml  ep-018.yaml  ep-019.yaml  ep-020.yaml  ep-021.yaml  ep-022.yaml  ep-023.yaml  ep-024.yaml  ep-025.yaml  ep-026.yaml  ep-027.yaml  ep-028.yaml  ep-029.yaml  ep-030.yaml  ep-031.yaml  ep-032.yaml  ep-033.yaml  ep-034.yaml  ep-035.yaml  ep-036.yaml  ep-037.yaml  ep-038.yaml  ep-039.yaml  ep-040.yaml  (+1 more)
eval/tests/: test_metrics.py
guard/: __init__.py  api.py  checker.py  guard.py  mapper.py  models.py
guard/tests/: test_api.py  test_checker.py  test_guard.py  test_mapper.py
policy/: compile_graph.py  rules_sg_mas626.yaml  schema.md
proposal/: PROPOSAL.md
scripts/: generate_episodes.py  m3_smoke.py  setup_demo.py
